Alpha V3 - Added Data Gen - Heart item now adds 1 heart and is 1 time use - Added CommandRegistrar System     - ResetHealthCommand (working)     - SetHeartsCommand (WIP not working)

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ loom {
     }
 }
 
+fabricApi {
+    configureDataGeneration {
+        client = true
+    }
+}
+
 repositories {
     // Add repositories to retrieve artifacts from in here.
     // You should only use this when depending on other mods because
