Alpha 0.4 - Adding Compiled JAR Files to repo

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
 loader_version=0.16.10
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=0.4-ALPHA
 maven_group=net.squidlover900
 archives_base_name=squidsmod
 # Dependencies
